# project_w5

./: README.md  config.yaml  functions.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
.virtual_documents/notebooks/: Untitled.ipynb  clean_up_final_demo_zidene.ipynb
Tableau/: .~Error_completionRate__17660.twbr  porject_w5_step_by_step_Mean.twb
data/clean/: clean_final_demo.csv  df_compl_duration.csv  df_step_by_step.csv  df_step_by_step_groupby.csv  duration_table.csv  funnel_all_groups.csv  funnel_variation.csv  only_durations.csv
notebooks/: DesignEffectiveness_Diana.ipynb  Error&CompletionRates_Diana.ipynb  HypothesisTesting_Diana.ipynb  Merge_files.ipynb  clean_up_final_demo_zidene.ipynb  cleaning_exp_web_data_Diana.ipynb
notebooks/.ipynb_checkpoints/: clean_up_final_demo_zidene-checkpoint.ipynb  cleaning_exp_web_data_Diana-checkpoint.ipynb
tableau_workbooks/: porject_w5.twb  porject_w5_Mean.twb
